# NimgLIVE

./: .gitignore  EASYINSTALL.md  LICENSE  README.md  b4_linux  build_for_linux.py  build_for_windows.bat  build_linux  build_mingw.sh  build_windows.bat  easy_install.sh  kernel.asm  kernel_mingw.asm  os.c
kernel/: CMakeLists.txt  init.c  kernel.asm  main.c
kernel/core/: gdt.c  gdt.h  io.c  io.h
kernel/display/: display.c  display.h
kernel/drivers/: drivers.c  drivers.h  keyboard.c  keyboard.h  ps2.c  ps2.h
kernel/std/: array.c  array.h  container_item.h  output.c  stdarg.h  stdio.h  string.c  string.h  time.c  time.h  types.h  unistd.c  unistd.h
kernel/sys/: console.c  console.h  hardware.c  hardware.h  modules.h  time.c  time.h
kernel/unittest/: std_test.c  unittest.h
syslinux/: README.md  syslinux.cfg
